@@ -4,6 +4,10 @@
   :main server.core
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
+  :jvm-opts ["--add-modules" "java.xml.bind"]        
   :dependencies [
-    [org.clojure/clojure "1.8.0"]
-    [http-kit "2.2.0"]])
+    [compojure "1.1.5"]
+    [ring/ring-devel "1.1.8"]
+    [ring/ring-core "1.1.8"]
+    [http-kit "2.3.0"]
+    [org.clojure/clojure "1.8.0"]])
